--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <main id="container2">
                     <form class="conceptsCovered">
                         <fieldset>
-                            <text> Concepts Covered</text>
+                            <text> Type of Travel</text>
                             <input>
 
                             </input>
