--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <form class="conceptsCovered">
                         <fieldset>
                             <text> Type of Travel</text>
-                            <input>
+                            <textarea id="travelType" rows="1" cols="20">
 
-                            </input>
+                            </textarea>
                         </fieldset>
                     </form>
 
@@ -41,7 +41,7 @@
                     <form class="Journal entry">
                         <fieldset>
                             <text> Journal Entry</text>
-                            <textarea>
+                            <textarea id="journalEntry">
 
                         </textarea>
 
@@ -64,7 +64,7 @@
                             <form class="button">
                                 <fieldset>
                                     <label for="button"></label>
-                                    <button type="button"> Submit Journal Entry</button>
+                                    <button id="submitNewQuote" type="button"> Submit Journal Entry</button>
                                 </fieldset>
                             </form>
                             <footer> </footer>
