--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <header> </header>
     <main>
         <div class="tenor-gif-embed" data-postid="25519465" data-share-method="host" data-aspect-ratio="2.5"
-            data-width="100%"><a href="https://tenor.com/view/welcome-wagon-oregon-trail-gif-25519465">Welcome Wagon
-                GIF</a>from <a href="https://tenor.com/search/welcome-gifs">Welcome GIFs</a></div>
-        <script type="text/javascript" async src="https://tenor.com/embed.js"> innerHeight</script>
+            data-width="200%">
+            <img src="https://media.tenor.com/rPqgvMnBi18AAAAC/welcome-wagon.gif"></a>
+            </div>
+        <!-- <script type="text/javascript" async src="https://tenor.com/embed.js"> innerHeight</script> -->
         <h2>Daily Journal</h2>
         <label id="container">
             <main id="container1">
@@ -30,9 +31,9 @@
                     <form class="conceptsCovered">
                         <fieldset>
                             <text> Type of Travel</text>
-                            <textarea id="travelType" rows="1" cols="20">
+                            <input id="travelType" rows="1" cols="20" placeholder="type here">
 
-                            </textarea>
+                            </input>
                         </fieldset>
                     </form>
 
@@ -41,9 +42,9 @@
                     <form class="Journal entry">
                         <fieldset>
                             <text> Journal Entry</text>
-                            <textarea id="journalEntry">
+                            <input id="journalEntry" placeholder="type here">
 
-                        </textarea>
+                        </input>
 
                         </fieldset>
                     </form>
